// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Route page should render correctly with a few routes 1`] = `
<Fragment>
  <TextContent>
    <Text
      component="h1"
    >
      Route
    </Text>
  </TextContent>
  <Split
    className=""
    component="div"
    gutter="md"
  >
    <SplitItem
      className=""
      isFilled={false}
      style={
        Object {
          "display": "flex",
          "flexDirection": "column",
        }
      }
    >
      <Form>
        <FormSelect
          aria-label="FormSelect Input"
          className=""
          isDisabled={false}
          isValid={true}
          onBlur={[Function]}
          onChange={[Function]}
          onFocus={[Function]}
          style={
            Object {
              "backgroundColor": "white",
              "marginBottom": 10,
            }
          }
          value={0}
        >
          <FormSelectOption
            className=""
            isDisabled={false}
            key="0"
            label="v1"
            value={0}
          />
          <FormSelectOption
            className=""
            isDisabled={false}
            key="1"
            label="v2"
            value={1}
          />
        </FormSelect>
      </Form>
      <LocationList
        depot={
          Object {
            "id": 1,
            "lat": 1.345678,
            "lng": 1.345678,
          }
        }
        removeHandler={[MockFunction]}
        selectHandler={[Function]}
        visits={
          Array [
            Object {
              "id": 1,
              "lat": 1.345678,
              "lng": 1.345678,
            },
            Object {
              "id": 2,
              "lat": 2.345678,
              "lng": 2.345678,
            },
            Object {
              "id": 3,
              "lat": 3.676111,
              "lng": 3.568333,
            },
          ]
        }
      />
    </SplitItem>
    <SplitItem
      className=""
      isFilled={true}
    >
      <RouteMap
        boundingBox={null}
        clickHandler={[Function]}
        depot={
          Object {
            "id": 1,
            "lat": 1.345678,
            "lng": 1.345678,
          }
        }
        removeHandler={[MockFunction]}
        routes={
          Array [
            Object {
              "track": Array [],
              "vehicle": Object {
                "capacity": 5,
                "id": 1,
                "name": "v1",
              },
              "visits": Array [
                Object {
                  "id": 1,
                  "lat": 1.345678,
                  "lng": 1.345678,
                },
                Object {
                  "id": 2,
                  "lat": 2.345678,
                  "lng": 2.345678,
                },
                Object {
                  "id": 3,
                  "lat": 3.676111,
                  "lng": 3.568333,
                },
              ],
            },
            Object {
              "track": Array [],
              "visits": Array [],
            },
          ]
        }
        selectedId={NaN}
        updateViewport={[MockFunction]}
        userViewport={
          Object {
            "center": Array [
              0,
              0,
            ],
            "isDirty": false,
            "zoom": 1,
          }
        }
        visits={
          Array [
            Object {
              "id": 2,
              "lat": 2.345678,
              "lng": 2.345678,
            },
            Object {
              "id": 3,
              "lat": 3.676111,
              "lng": 3.568333,
            },
            Object {
              "id": 4,
              "lat": 4.345678,
              "lng": 4.345678,
            },
            Object {
              "id": 5,
              "lat": 5.345678,
              "lng": 5.345678,
            },
          ]
        }
      />
    </SplitItem>
  </Split>
</Fragment>
`;

exports[`Route page should render correctly with no routes 1`] = `
<Fragment>
  <TextContent>
    <Text
      component="h1"
    >
      Route
    </Text>
  </TextContent>
  <Split
    className=""
    component="div"
    gutter="md"
  >
    <SplitItem
      className=""
      isFilled={false}
      style={
        Object {
          "display": "flex",
          "flexDirection": "column",
        }
      }
    >
      <Form>
        <FormSelect
          aria-label="FormSelect Input"
          className=""
          isDisabled={true}
          isValid={true}
          onBlur={[Function]}
          onChange={[Function]}
          onFocus={[Function]}
          style={
            Object {
              "backgroundColor": "white",
              "marginBottom": 10,
            }
          }
          value={0}
        />
      </Form>
      <LocationList
        depot={null}
        removeHandler={[MockFunction]}
        selectHandler={[Function]}
        visits={Array []}
      />
    </SplitItem>
    <SplitItem
      className=""
      isFilled={true}
    >
      <RouteMap
        boundingBox={null}
        clickHandler={[Function]}
        depot={null}
        removeHandler={[MockFunction]}
        routes={Array []}
        selectedId={NaN}
        updateViewport={[MockFunction]}
        userViewport={
          Object {
            "center": Array [
              0,
              0,
            ],
            "isDirty": false,
            "zoom": 1,
          }
        }
        visits={Array []}
      />
    </SplitItem>
  </Split>
</Fragment>
`;
